<resources>
    <string name="app_name">hepsiburada_case_study</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="apps">Apps</string>
    <string name="search">Search</string>
    <string name="searchHint">tap to search anything</string>
    <string name="loadingStatusImage">loading</string>
    <string name="recyclerViewDescription">result list</string>
    <string name="moviesToggle">Movies</string>
    <string name="musicToggle">Music</string>
    <string name="appsToggle">Apps</string>
    <string name="booksToggle">Books</string>
    <string name="the_new_music_thats_matters">The new music thats matters</string>
    <string name="the_newests">The Newests</string>
    <string name="podcast">Podcast</string>
    <string name="version">Version:</string>
    <string name="release_note">Release Note</string>
    <string name="about_this_app">About This App</string>
    <string name="min_os_version">Min OS Version:</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>