<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.aysesenses.hepsiburada_case_study.overview.OverviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aysesenses.hepsiburada_case_study.MainActivity">

        <!--
        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/loadingStatusImage"
             />
        -->



        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_fileName="loading_lottie.json"
            app:itunesApiStatus="@{viewModel.status}"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            app:queryHint="@string/searchHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </androidx.appcompat.widget.SearchView>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:singleSelection="true">

            <Button
                android:id="@+id/btnMovie"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro"
                android:text="@string/moviesToggle"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnMusic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro"
                android:text="@string/musicToggle"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnApps"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro"
                android:text="@string/appsToggle"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnBooks"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro"
                android:text="@string/booksToggle"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:typeface="sans" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_grid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:contentDescription="@string/recyclerViewDescription"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup"
            app:listData="@{viewModel.properties}"
            app:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/item_grid_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books_grid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:contentDescription="@string/recyclerViewDescription"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup"
            app:bookData="@{viewModel.books}"
            app:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/item_grid_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>